syntax = "proto3";

option go_package = "github.com/baez90/inetmock/internal/rpc";
option java_multiple_files = true;
option java_package = "com.github.baez90.inetmock.rpc";
option java_outer_classname = "HealthProto";

package inetmock;

service Health {
    rpc GetHealth(HealthRequest) returns (HealthResponse) {}
}

enum HealthState {
    HEALTHY = 0;
    INITIALIZING = 1;
    UNHEALTHY = 2;
    UNKNOWN = 3;
}

message HealthRequest {
    repeated string components = 1;
}

message ComponentHealth {
    HealthState State = 1;
    string message = 2;
}

message HealthResponse {
    HealthState overallHealthState = 1;
    map<string, ComponentHealth> componentsHealth = 2;
}